--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
 	"main": "build",
 	"scripts": {
 		"build": "tsc",
-		"test": "jest"
+		"test": "jest",
+		"prepublishOnly": "npm run build"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"remark": "^12.0.0"
+		"@fox-land/remark-insert": "^0.1.3"
+	},
+	"peerDependencies": {
+		"remark": ">=12.0.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^26.0.4",
 		"@types/node": "^14.0.23",
 		"jest": "^26.1.0",
+		"remark": "^12.0.1",
 		"ts-jest": "^26.1.2",
 		"typescript": "^3.9.6"
 	}
